force-app/main/default/objects/TR1__Application_V2__c/fields/Applicant_Name__c.field-meta.xml
<CustomField>
    <fullName>Applicant_Name__c</fullName>
    <formula>TR1__Applicant__r.FirstName &amp; &quot; &quot; &amp; TR1__Applicant__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Applicant Name</label>
    <type>Text</type>
</CustomField>