force-app/main/default/objects/TR1__Application_V2__c/fields/Candidate_Source__c.field-meta.xml
<CustomField>
    <fullName>Candidate_Source__c</fullName>
    <formula>TEXT(TR1__Applicant__r.TR1__Source__c)</formula>
    <label>Candidate Source</label>
    <type>Text</type>
</CustomField>