force-app/main/default/objects/TR1__Application_V2__c/fields/TKC_Applicant_Name__c.field-meta.xml
<CustomField>
    <fullName>TKC_Applicant_Name__c</fullName>
    <formula>TR1__Applicant__r.FirstName &amp; &apos; &apos; &amp; TR1__Applicant__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TKC Applicant Name</label>
    <type>Text</type>
</CustomField>