force-app/main/default/objects/TR1__Application_V2__c/recordTypes/Contract.recordType-meta.xml
<RecordType>
    <fullName>Contract</fullName>
    <active>false</active>
    <label>Contract</label>
</RecordType>