force-app/main/default/objects/TR1__Application_V2__c/recordTypes/Multi_Child_Young_Person_Contract.recordType-meta.xml
<RecordType>
    <fullName>Multi_Child_Young_Person_Contract</fullName>
    <active>true</active>
    <label>Multi-Child/Young Person</label>
</RecordType>