force-app/main/default/objects/TR1__Application_V2__c/validationRules/Block_move_to_Hubspot_Candidate.validationRule-meta.xml
<ValidationRule>
    <fullName>Block_move_to_Hubspot_Candidate</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(TR1__Applicant__r.TR1__Candidate_Status__c  , &quot;Hubspot Candidate&quot;)</errorConditionFormula>
    <errorMessage>You cannot submit Candidates that have the ‘Hubspot Candidate’ status</errorMessage>
</ValidationRule>